--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
+        "nwidart/laravel-modules": "^11.1",
         "phpunit/phpunit": "^11.0.1"
     },
     "autoload": {
@@ -63,7 +64,8 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "wikimedia/composer-merge-plugin": true
         }
     },
     "minimum-stability": "stable",
