--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,7 @@
         },
         "merge-plugin": {
             "include": [
-                "Modules/*/composer.json"
+                "modules/*/composer.json"
             ]
         }
     },
